# chesnokuz

./: pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 68e009b661ed_add_search_device_like.py  6fad2fecbb8a_add_changes.py  ec2d41dc5ba5_add_posttag_m2.py  ffbad2a141f3_add_posttag_m2.py
app/: config.py  database.py  main.py  models.py  schemas.py  seed.py  utils.py
app/admin/: settings.py  views.py
app/routers/: __init__.py  auth.py  category.py  posts.py  tag.py  txt.txt  users.py
app/routers/auth/: basic.py  gwt.py  router.py
app/schemas/: __init__.py  auth.py
