[project]
name = "chesnokuz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.2",
    "crypto>=1.4.1",
    "fastapi[all]>=0.128.0",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "matplotlib>=3.10.8",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.45",
    "starlette-admin>=0.16.0",
    "zxcvbn>=4.5.0",
]
